--- a/bluetooth.X/nbproject/Makefile-genesis.properties
+++ b/bluetooth.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Fri Nov 15 18:21:15 GMT 2019
-default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-K_DFP\\1.2.72
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.10\\bin
-configurations-xml=d48d2bf9cd6df4d79e263db3557b0831
+#Wed Nov 20 16:22:52 GMT 2019
+default.Pack.dfplocation=/Applications/microchip/mplabx/v5.30/packs/Microchip/PIC18F-K_DFP/1.2.72
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.10/bin
+configurations-xml=01b112a96f2906a2cc072118a947070f
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=2.10
-host.platform=windows
+host.platform=mac
 conf.ids=default
 default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
